[package]
name = "scenario-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
